form adds things to db

--- a/src/main/resources/templates/new.hbs
+++ b/src/main/resources/templates/new.hbs
@@ -6,7 +6,7 @@
 <body>
 <div class="content">
     <h1>Hello, new entry!</h1>
-    <form>
+    <form action="/new" method="post">
         id<br>
         <input type="text" name="id"><br>
         type<br>
