made form smarter

--- a/src/main/resources/templates/new.hbs
+++ b/src/main/resources/templates/new.hbs
@@ -10,7 +10,11 @@
         id<br>
         <input type="text" name="id"><br>
         type<br>
-        <input type="text" name="type"><br>
+        <select name="type">
+            <option value="book">Book</option>
+            <option value="article">Article</option>
+            <option value="inproceedings">Inproceedings</option>
+        </select>
         author<br>
         <input type="text" name="author"><br>
         title<br>
