made form prettier

--- a/src/main/resources/templates/new.hbs
+++ b/src/main/resources/templates/new.hbs
@@ -14,7 +14,7 @@
             <option value="book">Book</option>
             <option value="article">Article</option>
             <option value="inproceedings">Inproceedings</option>
-        </select>
+        </select><br>
         author<br>
         <input type="text" name="author"><br>
         title<br>
