sekalaisia käyttöliittymä muutoksia

--- a/src/main/resources/templates/new.hbs
+++ b/src/main/resources/templates/new.hbs
@@ -21,6 +21,8 @@
         <input type="text" name="title"><br>
         year<br>
         <input type="number" name="year" min="1" max="2017"><br>
+        publisher<br>
+        <input type="text" name="publisher"><br>
         <input type="submit" value="Submit"><br>
     </form>
 </div>
