--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -7,7 +7,7 @@
         <div class="content">
             <h1>Hello, database!</h1>
             {{#each lines}}
-                <li> {{ this.author }} <a href="/{{this.id}}">{{ this.title }}</a> {{ this.year }} {{ this.publisher }} </li>
+                <li> {{ this.author }} <a href="/{{this.id}}">{{ this.title }}</a> {{ this.year }} {{ this.publisher }} {{ this.address }} {{ this.pages }} </li>
             {{/each}}
         </div>
     </body>
