--- a/src/main/resources/templates/new.hbs
+++ b/src/main/resources/templates/new.hbs
@@ -23,6 +23,10 @@
         <input type="number" name="year" min="1" max="2017"><br>
         publisher<br>
         <input type="text" name="publisher"><br>
+        address<br>
+        <input type="text" name="address"><br>
+        pages<br>
+        <input type="text" name="pages">
         <input type="submit" value="Submit"><br>
     </form>
 </div>
