--- a/src/main/resources/templates/new.hbs
+++ b/src/main/resources/templates/new.hbs
@@ -26,7 +26,7 @@
         address<br>
         <input type="text" name="address"><br>
         pages<br>
-        <input type="text" name="pages">
+        <input type="text" name="pages"><br>
         <input type="submit" value="Submit"><br>
     </form>
 </div>
