linkki takaisin etusivulle

--- a/src/main/resources/templates/new.hbs
+++ b/src/main/resources/templates/new.hbs
@@ -29,6 +29,8 @@
         <input type="text" name="pages"><br>
         <input type="submit" value="Submit"><br>
     </form>
+    <br>
+    <input type="button" onclick="location.href='http://localhost:8000/';" value="Back to home page" /><br>
 </div>
 </body>
 <html>
