--- a/src/main/resources/templates/new.hbs
+++ b/src/main/resources/templates/new.hbs
@@ -30,7 +30,7 @@
         <input type="submit" value="Submit"><br>
     </form>
     <br>
-    <input type="button" onclick="location.href='http://localhost:8000/';" value="Back to home page" /><br>
+    <input type="button" onclick="location.href='/';" value="Back to home page" /><br>
 </div>
 </body>
 <html>
