--- a/src/main/resources/templates/reference.hbs
+++ b/src/main/resources/templates/reference.hbs
@@ -7,7 +7,7 @@
         <div class="content">
             <h1>{{ reference }}</h1>
             <br>
-            <input type="button" onclick="location.href='http://localhost:8000/';" value="Back to home page" /><br>
+            <input type="button" onclick="location.href='/';" value="Back to home page" /><br>
         </div>
     </body>
 <html>
