--- a/src/main/resources/templates/index.jade
+++ b/src/main/resources/templates/index.jade
@@ -57,8 +57,8 @@ block content
                     td: a(href="#") ×
         a.btn.add-btn(href="/new") Add new
 
-    h2 Inproceeding references
-    section#inproceeding-references
+    h2 Inproceedings references
+    section#inproceedings-references
         table
             tr
                 th Id
