--- a/src/main/resources/templates/layout.jade
+++ b/src/main/resources/templates/layout.jade
@@ -1,6 +1,7 @@
 doctype html
 html
     head
+        script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js")
         link(rel="stylesheet" href="/css/index.css")
     body
         .content
