--- a/src/main/resources/templates/index.jade
+++ b/src/main/resources/templates/index.jade
@@ -89,7 +89,7 @@ block content
                         td= line.pages
                         td= line.publisher
                         td= line.address
-                        td: button.btn.inline-btn(onclick="#deleteReference(#{line.id})") delete
+                        td: button.btn.inline-btn(onclick="deleteReference('#{line.id}')") delete
 
     h2 Export BibTeX
     section#bibtex-export
@@ -107,10 +107,10 @@ block content
             $("#export").click(() => {
                 $("#bibtex").load("/bibtex", () => $("#bibtex").removeClass("hidden"))
             });
-            $("#deleteReference").click(() => {
-                $.ajax({
-                    url: '/#{line.id}',
-                    type: 'DELETE'
-                });
-            });
         });
+        function deleteReference(id) {
+            $.ajax({
+                url: '/' + id,
+                type: 'DELETE'
+            });
+        };
