still working on deleting

--- a/src/main/resources/templates/index.jade
+++ b/src/main/resources/templates/index.jade
@@ -111,6 +111,6 @@ block content
         function deleteReference(id) {
             $.ajax({
                 url: '/' + id,
-                type: 'DELETE'
+                method: 'DELETE'
             });
         };
