--- a/src/main/resources/templates/reference.jade
+++ b/src/main/resources/templates/reference.jade
@@ -9,6 +9,11 @@ block content
 
     textarea.hidden.bibtex-container#bibtex(rows="8", cols="60", readonly)
 
+    h3 Add tag
+    section#tag-addition
+        input#tag(name="tag" type="text" placeholder="Type your tag here" size="60")
+        a.btn.inline-btn(href="#") Add
+
     script.
         $(document).ready(() => {
             $("#export").click(() => {
