Muotoile BibTex paremmin, pieniä korjauksia

--- a/src/main/resources/templates/layout.jade
+++ b/src/main/resources/templates/layout.jade
@@ -3,6 +3,7 @@ html
     head
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js")
         link(rel="stylesheet" href="/css/index.css")
+        title Haloo Consulting - Ohturef
         block scripts
     body
         .content
