--- a/src/main/resources/templates/reference.jade
+++ b/src/main/resources/templates/reference.jade
@@ -11,8 +11,9 @@ block content
 
     h3 Add tag
     section#tag-addition
+    form(action="/tag", method="post")
         input#tag(name="tag" type="text" placeholder="Type your tag here" size="60")
-        a.btn.inline-btn(href="#") Add
+        input.btn.inline-btn(type="submit", value="Add")
 
     script.
         $(document).ready(() => {
