--- a/src/main/resources/templates/reference.jade
+++ b/src/main/resources/templates/reference.jade
@@ -9,6 +9,18 @@ block content
 
     textarea.hidden.bibtex-container#bibtex(rows="8", cols="60", readonly)
 
+    h3 Reference tags
+    section#reference-tags
+        if empty(reference.tags)
+            p No reference tags
+        else
+            table
+                tr
+                    th Tags
+                each line in reference.tags
+                    tr
+                        td= line.tags
+
     h3 Add tag
     section#tag-addition
         form(action="/ref/#{reference.id}/tag", method="POST")
