--- a/src/main/resources/templates/reference.jade
+++ b/src/main/resources/templates/reference.jade
@@ -59,7 +59,8 @@ block content
                     th Tags
                 each line in reference.tags
                     tr
-                        td= line.tags
+                        td= line.tag
+
 
     h3 Add tag
     section#tag-addition
